tests/snapshots/nrc__render_test__tests__flash_message_dynamic_height.snap
---
source: src/render_test.rs
expression: output
---
                              
                              
                              
                              
                              
                              
                              
This is a very long flash     
message that should wrap      
across multiple lines to      
test dynamic height           
allocation                    
┌INPUT───────────────────────┐
│                            │
└────────────────────────────┘
