tests/snapshots/nrc__render_test__tests__flash_message_wrapping_fits.snap
---
source: src/render_test.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
Short message that fits                                                         
┌INPUT─────────────────────────────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
