tests/snapshots/nrc__render_test__tests__flash_message_wrapping_npub.snap
---
source: src/render_test.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
Copied npub to clipboard:                                                       
npub1rfs5zsr4v2qjizw8a8x2gvxgeamshcuam5y9v9m2ysg47mwue98q4v5je3                 
┌INPUT─────────────────────────────────────────────────────────────────────────┐
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
